--- a/user_auth/templates/login_registration/login_page.html
+++ b/user_auth/templates/login_registration/login_page.html
@@ -1,21 +1,9 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Логин</title>
-    {% load static %}
-    <script src="{% static 'js/login_page.js' %}" defer></script>
-</head>
-<body>
-    <h1>Логин</h1>
-    <form id="login-form">
-        <input type="text" id="login-phone" name="phone_number" placeholder="Номер телефона" required>
-        <input type="password" id="login-password" name="password" placeholder="Пароль" required>
-        <button type="submit">Войти</button>
-    </form>
-
-    <div id="tokens"></div>
-    <div id="error-message"></div>
-</body>
-</html>
+<!-- templates/registration/login.html -->
+{% block content %}
+  <h2>Login</h2>
+  <form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Login</button>
+  </form>
+{% endblock %}
